--- a/x/index.html
+++ b/x/index.html
@@ -24,7 +24,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">Gordo Love X</a></h1>
 								<hr />
-								<p>An exclusive release by Almighty Foot Clan</p>
+								<p>Exclusively on Almighty Foot Clan</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
