--- a/x/index.html
+++ b/x/index.html
@@ -64,10 +64,9 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+						<h2>Hi. You're listening to <strong>Gordo Love X</strong>.</h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built on <strong>skel</strong> and released under the <a href="http://html5up.net/license">CCA</a> license.
+							Midwest underground Hip-Hop made in <strong>Muskegon, MI</strong>, released exclusively on <a href="http://almightyfootlan.com/">Almighty Foot Clan</a>.
 						</p>
 					</header>
 				</section>
@@ -77,11 +76,11 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="https://gordolovex.bandcamp.com/album/vowel-movements-feat-wuzee-dj-m-select" class="image featured"><img src="images/vowel-movements-single.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="https://gordolovex.bandcamp.com/album/vowel-movements-feat-wuzee-dj-m-select">Vowel Movements (feat. WuZee)</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Includes bonus TV Track by DJ M-Select with purchase.</p>
 						</article>
 
 						<article>
