--- a/x/index.html
+++ b/x/index.html
@@ -66,7 +66,7 @@
 					<header>
 						<h2>Hi. You're listening to <strong>Gordo Love X</strong>.</h2>
 						<p>
-							Midwest underground Hip-Hop made in <strong>Muskegon, MI</strong>, released exclusively on <a href="http://almightyfootlan.com/">Almighty Foot Clan</a>.
+							Midwest underground Hip-Hop made in <strong>Muskegon, MI</strong>, released exclusively on <a href="http://almightyfootclan.com/">Almighty Foot Clan</a>.
 						</p>
 					</header>
 				</section>
